// schedules.proto
package gobbler;
syntax = "proto3";

message TrainMessage {
  uint32 time_diff = 1;
  optional string run_number = 2;
  optional uint32 headsign_id = 3;
  optional uint32 route_id = 4;
}

message StopMessage {
  string stop_id = 1;
  repeated TrainMessage train_message = 2;
}

message ScheduleMessage {
  repeated StopMessage stop_message = 1;
}

// beyond is for positions
message VehicleLocationMessage {
  float lon = 1;
  float lat = 2;
  optional string color = 3;
}

message LocationsMessage {
  uint32 time = 1;
  repeated VehicleLocationMessage vehicle_message = 2;
}

message VehicleStopMessage {
  string stop_id = 1;
  uint32 time_diff = 2;
}

message VehicleScheduleMessage {
  string run_number = 1;
  string route_id = 2;
  string service_id = 3;
  uint32 vehicle_stop = 4;
}

message MultipleVehiclesScheduleMessage {
  //string service_id = 1;
  repeated VehicleScheduleMessage vehicle_schedule_message = 1;
}
